Fix styles and add jump button

--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,6 @@
   --lineHeight-tight: 1.2;
   --lineHeight-normal: 1.5;
   --lineHeight-relaxed: 1.625;
-  /* 1.200 Minor Third Type Scale */
   --fontSize-0: 0.850rem;
   --fontSize-1: 1.000rem;
   --fontSize-2: 1.200rem;
@@ -65,7 +64,9 @@
   --color-text-dark: #eee;
   --color-tag-border: #fcfcfc;
   --color-tag-bg: #f1f1f1;
+  --color-jump-button-bg: lightsteelblue;
   --corner-radius: 0.25em;
+  --box-shadow: -0.2em -0.2em 0.5em rgba(0, 0, 0, 0.2);
 }
 
 /* HTML elements */
@@ -123,6 +124,7 @@ a:focus {
   white-space: nowrap;
   font-size: var(--fontSize-tag);
   margin-right: var(--spacing-1);
+  margin-bottom: var(--spacing-1);
 }
 
 .tag a {
@@ -145,25 +147,26 @@ a:focus {
   padding: var(--spacing-0) var(--spacing-5) var(--spacing-10) var(--spacing-5);
 }
 
-.global-wrapper[data-is-root-path="true"] .bio {
-  margin-bottom: var(--spacing-20);
-}
-
 .global-header {
   background-color: white;
-  margin-bottom: var(--spacing-4);
+  margin-bottom: var(--spacing-3);
 }
 
 .global-header-wrapper {
-  margin-top: var(--spacing-4);
+  display: flex;
   margin: var(--spacing-0) auto;
   padding: var(--spacing-1) var(--spacing-5);
   max-width: var(--maxWidth-wrapper);
 }
 
+.global-header-wrapper .header-link-home {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .main-heading {
   font-size: var(--fontSize-7);
-  margin: 0;
+  margin: var(--spacing-0);
 }
 
 /* Media queries */
@@ -172,15 +175,15 @@ a:focus {
   .global-wrapper {
     padding: var(--spacing-0) var(--spacing-0) var(--spacing-10) var(--spacing-0);
   }
+  .global-header {
+    margin-bottom: var(--spacing-0);
+    border-bottom: solid 1px var(--color-accent);
+  }
   .global-header-wrapper {
     padding: var(--spacing-1) var(--spacing-1);
   }
-/* blockquote {
-    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
-    margin-left: var(--spacing-0);
+  .global-header-wrapper .header-link-home {
+    margin-left: auto;
+    margin-right: auto;
   }
-  ul,
-  ol {
-    list-style-position: inside;
-  } */
 }
