--- a/src/templates/blog-post.css
+++ b/src/templates/blog-post.css
@@ -151,17 +151,21 @@ table thead tr th {
   min-width: 0;
 }
 
-.main-container main {
+.main-container > main {
   background-color: var(--color-bg);
   padding: var(--spacing-4);
   grid-row: 2 / 3;
 }
 
-.main-container aside {
+.main-container > aside {
   grid-row: 2 / 3;
 }
 
-.main-container .breadcrumb-list {
+.main-container > main > * {
+  overflow: hidden;
+}
+
+.main-container > .breadcrumb-list {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   font-size: var(--fontSize-breadcrumb);
@@ -173,17 +177,40 @@ table thead tr th {
   .main-container {
     display: grid;
   }
-  .main-container main {
+  .main-container > main {
     padding: var(--spacing-3);
     grid-column: 1 / 3;
     grid-row: 1 / 3;
   }
-  .main-container aside {
+  .main-container > aside {
     display: none;
   }
-  .main-container .breadcrumb-list {
+  .main-container > .breadcrumb-list {
     display: none;
   }
+}
+
+header {
+  margin-bottom: var(--spacing-6);
+}
+
+header .tag-list {
+  margin-top: var(--spacing-4);
+}
+
+header .header-meta {
+  display: flex;
+  margin-top: var(--spacing-2);
+  font-size: var(--fontSize-0);
+  align-items: center;
+}
+
+header .header-meta :last-child {
+  margin-left: auto;
+}
+
+.post-hero {
+  margin-bottom: var(--spacing-5);
 }
 
 .post-toc {
@@ -212,17 +239,6 @@ table thead tr th {
   text-decoration: underline;
 }
 
-.header-meta {
-  display: flex;
-  margin-top: var(--spacing-4);
-  margin-bottom: var(--spacing-6);
-  font-size: var(--fontSize-0);
-  align-items: center;
-}
-
-.header-meta :last-child {
-  margin-left: auto;
-}
 
 .gatsby-highlight-code-line {
   background-color: darkslategrey;
